--- a/package.json
+++ b/package.json
@@ -1,22 +1,45 @@
 {
-  "name": "personal-portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "@types/node": "18.14.5",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@next/font": "13.1.6",
+    "@react-three/drei": "^9.56.25",
+    "@react-three/fiber": "^8.11.2",
+    "@react-three/postprocessing": "^2.7.0",
+    "@react-three/test-renderer": "^8.1.2",
+    "@types/node": "18.14.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "@types/three": "^0.149.0",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "framer-motion": "^10.0.1",
+    "jest-styled-components": "^7.1.1",
+    "next": "13.1.6",
+    "postprocessing": "^6.30.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6",
+    "three": "^0.150.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "pinst": "^3.0.0"
   }
 }
