--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@commitlint/config-conventional": "^17.4.4",
+    "@juggle/resize-observer": "^3.4.0",
     "@next/font": "13.1.6",
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
