--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/font": "13.1.6",
     "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
+    "@react-three/gltfjsx": "^4.3.4",
     "@react-three/postprocessing": "^2.7.0",
     "@react-three/test-renderer": "^8.1.2",
     "@types/node": "18.14.0",
@@ -26,6 +27,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^10.0.1",
     "jest-styled-components": "^7.1.1",
+    "maath": "^0.5.2",
     "next": "13.1.6",
     "postprocessing": "^6.30.1",
     "react": "^18.2.0",
