--- a/package.json
+++ b/package.json
@@ -34,17 +34,19 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.6",
     "three": "^0.150.0",
-    "typescript": "4.9.5"
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@styled/typescript-styled-plugin": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "jest-styled-components": "^7.1.1",
-    "pinst": "^3.0.0"
+    "pinst": "^3.0.0",
+    "typescript": "^5.2.2"
   }
 }
